--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-container.html
@@ -1,1 +1,15 @@
-<h1>Hotel Operations</h1>
+<div class="row full-height card">
+	<div class="col-xs-2 col-md-2 home-side-card">
+		
+		
+		<div class="home-side-card-bottom-box">
+			<th-button [upFont]="'\''" [text]="'Booking'" (onButtonClick)="openNewBookingModal()"></th-button>
+		</div>		
+	</div>
+	<div class="col-xs-8 col-md-8 home-card">
+	
+	</div>
+	<div class="col-xs-2 col-md-2 home-side-card">
+
+	</div>
+</div>
