--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -51,7 +51,7 @@
 
         </div>
 
-        <div class="row">
+        <div *ngIf="!roomCategoryNotSelected" class="row">
             <div class="col-xs-6 col-md-6 form-group">
                 <div class="row">
                     <div class="col-xs-12 form-group">
