--- a/assets/client/src/pages/internal/containers/home/pages/utils/header/container/template/main-header.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/header/container/template/main-header.html
@@ -1,4 +1,3 @@
-<!-- logo area -->
 <div class="row">
 	<div class="col-xs-2 col-md-2 text-center">
 		<div class="home-header-logo">
@@ -8,7 +7,6 @@
 
 	</div>
 	<div class="col-xs-10 col-md-10">
-		<!-- top navigation -->
 		<div class="row">
 			<div class="col-xs-9">
 				<div class="form-inline">
@@ -24,26 +22,14 @@
 			</div>
 			<div class="col-xs-3">
 				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<a class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-							<span class="fa fa-gear fa-2x"></span>
-						</a>
-						<ul class="dropdown-menu animated fadeInDown pull-right">
-							<li>
-								<a [routerLink]="['/MainHomeComponent/SettingsContainerComponent']">
-									{{ 'Settings' | translate }}
-								</a>
-							</li>
-							<li>
-								<a href (click)="logOut()">
-									<i class="fa fa-sign-out pull-right"></i> {{ 'Log Out' | translate }}
-								</a>
-							</li>
-						</ul>
+					<li class="dropdown">
+						<header-notifications></header-notifications>
+					</li>
+					<li class="dropdown">
+						<header-settings></header-settings>
 					</li>
 				</ul>
 			</div>
 		</div>
-		<!-- /top navigation -->
 	</div>
 </div>
