--- a/assets/client/src/pages/internal/containers/wizard/pages/utils/header/template/wizard-header-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/utils/header/template/wizard-header-component.html
@@ -13,12 +13,9 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="">
 						<a class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-							<span class="fa fa-gear fa-2x"></span>
+							<span class="fa fa-gear fa-lg"></span>
 						</a>
 						<ul class="dropdown-menu dropdown-usermenu animated fadeInDown pull-right">
-							<li>
-								<a>{{ 'Help' | translate }}</a>
-							</li>
 							<li>
 								<a (click)="logOut()">
 									<i class="fa fa-sign-out pull-right"></i> {{ 'Log Out' | translate }}
