--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -1,5 +1,5 @@
 <loading-component [isLoading]="isLoading"></loading-component>
-<div class="basic-info-form-container" customScroll>
+<div class="basic-info-form-container container-fluid" customScroll>
 	<div class="row basic-info-form" *ngIf="!isLoading">
 		<div class="col-xs-12 col-md-4">
 			<label class="control-label">
