--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
@@ -3,17 +3,17 @@
 		<div class="col-xs-7 col-md-7 full-height">
 			<h1 class="oneline-text full-height">
 				<i class="fa fa-2x unitpal-font">'</i>
-				{{ 'New Booking' | translate }} > <small> Basic Information </small>
+				{{ 'New Booking' | translate }} <small> {{ pathString }} </small>
 			</h1>
 		</div>
 		<div class="col-xs-5 col-md-5 full-height">
 			<div class="row full-height">
 				<div class="col-xs-8">
 					<p class="btn-square-container">
-						<a class="btn btn-square btn-square-next-prev disabled">
+						<a class="btn btn-square btn-square-next-prev" [ngClass]="{disabled: !hasPreviousPage()}" (click)="movePrevious()">
 							<i class="fa unitpal-font"><</i>
 						</a>
-						<a class="btn btn-square btn-square-next-prev">
+						<a class="btn btn-square btn-square-next-prev" [ngClass]="{disabled: !canMoveNext()}" (click)="moveNext()" >
 							<i class="fa unitpal-font">></i>
 						</a>
 					</p>
@@ -31,6 +31,7 @@
 		</div>
 	</div>
 </div>
-<div class="modal-lg-body">
-
+<div class="modal-lg-body container">
+	<new-booking-search class="full-height" *ngIf="isBookingSearch()"> </new-booking-search>
+	<new-booking-fill-details class="full-height" *ngIf="isFillDetails()"> </new-booking-fill-details>
 </div>
