[T203] Integrated select2 library

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
@@ -14,7 +14,7 @@
 				<div class="form-group">
 					<label>{{ 'Customer' | translate }}</label>
 					<div class="input-group">
-						<input type="text" class="form-control">
+						<search-input-text [placeholder]="'Customer Name'"></search-input-text>
 						<span class="input-group-addon th-addon-button"><small></small> <i class="fa unitpal-font">(</i>  {{ 'Select' | translate }}</span>
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Not a valid customer' | translate }}</small></label>
