--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -954,8 +954,7 @@ lazy-loading-table {
     overflow-y: hidden;
 }
 .th-button-box {
-    padding-top: 0;
-    padding-bottom: 0;
+    padding-top: 7px;
 }
 .th-button-box>i {
     font-size: 30px;
@@ -1659,4 +1658,24 @@ a.btn.btn-square:focus {
 }
 .no-padding {
     padding: 0px 0px;
+}
+.search-input-text {
+    display: block;
+    width: 100%; 
+    height: 34px !important;
+    font-size: 13px;
+}
+.input-group .select2-selection {
+    min-height: 34px !important;
+    height: 100% !important;
+    border: 1px solid #ccc;
+}
+.input-group .select2-container {
+  position: relative;
+  z-index: 2;
+  float: left;
+  width: 100%;
+  margin-bottom: 0;
+  display: table;
+  table-layout: fixed;
 }
