--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -19,6 +19,7 @@
 	<link href="/node_modules/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 	<link href="/node_modules/toastr/build/toastr.min.css" rel="stylesheet">
 	<link href='/node_modules/perfect-scrollbar/dist/css/perfect-scrollbar.min.css' rel='stylesheet'>
+	<link href="/node_modules/select2/dist/css/select2.min.css" rel="stylesheet" />
 
 	<!-- Custom CSS -->
 	<link href="/client/static-assets/css/unitpal.css" rel="stylesheet">
@@ -39,6 +40,7 @@
 	<script src="/node_modules/bootstrap-daterangepicker/daterangepicker.js"></script>
 	<script src="/node_modules/pace-progress/pace.min.js"></script>
 	<script src='/node_modules/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.min.js'></script>
+	<script src="/node_modules/select2/dist/js/select2.min.js"></script>
 	
 	<%if (isDevelopmentEnvironment) {%>
 		<script src="/client/systemjs.internal.config.js"></script>
