--- a/assets/client/src/pages/internal/containers/home/pages/utils/header/subcomponents/notifications/template/header-notifications.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/header/subcomponents/notifications/template/header-notifications.html
@@ -17,7 +17,7 @@
 	</li>
 	
 	<!-- Next <li> only if no notifications -->
-	<li *ngIf="numUnread == 0">
+	<li *ngIf="lastNotificationsList.length == 0">
 		<a>
 			<span class="message">
 				{{ 'No notifications' | translate }}
