--- a/assets/client/src/pages/internal/containers/home/pages/utils/notifications/modal/template/notifications-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/notifications/modal/template/notifications-modal.html
@@ -40,7 +40,7 @@
 						<kbd>{{ 'Selected' | translate }}</kbd>
 					</div>
 					<div>
-						<i class="fa fa-calendar"></i> <small>12-02-2015 18:20</small>
+						<i class="fa fa-calendar"></i> <small>{{ selectedNotification.thTimestamp | thtimestamp }}</small>
 					</div>
 					<div>
 						<i class="fa fa-envelope"></i> <small>{{selectedNotification.translatedMessage}}</small>
