--- a/assets/client/src/pages/internal/containers/home/pages/utils/notifications/modal/template/notifications-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/notifications/modal/template/notifications-modal.html
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 	<div class="modal-lg-body container">
-		<div class="row full-height">
+		<div class="card">
 			<div class="overview-left col-xs-9">
 				<div class="lazy-loading-table-filter">
 					<ul class="nav nav-tabs">
