--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
@@ -17,9 +17,9 @@
 							<i class="fa unitpal-font">></i>
 						</a>
 					</p>
-					<p class="btn-err-container">
+					<p class="btn-err-container" *ngIf="errorString">
 						<i class="fa unitpal-font">+</i>
-						<span>Insufficient Rooms to use these price products</span>
+						<span>{{ errorString }}</span>
 					</p>
 				</div>
 				<div class="col-xs-4 full-height">
@@ -34,4 +34,5 @@
 <div class="modal-lg-body container">
 	<new-booking-search class="full-height" *ngIf="isBookingSearch()"> </new-booking-search>
 	<new-booking-fill-details class="full-height" *ngIf="isFillDetails()"> </new-booking-fill-details>
+	<booking-customer-register class="full-height" *ngIf="isCustomerRegister()"> </booking-customer-register>
 </div>
