socket.io integration

--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -41,6 +41,7 @@
 	<script src="/node_modules/pace-progress/pace.min.js"></script>
 	<script src='/node_modules/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.min.js'></script>
 	<script src="/node_modules/select2/dist/js/select2.min.js"></script>
+	<script src="/node_modules/socket.io-client/socket.io.js"></script>
 	
 	<%if (isDevelopmentEnvironment) {%>
 		<script src="/client/systemjs.internal.config.js"></script>
