--- a/assets/client/src/pages/external/main/template/main-layout-external.html
+++ b/assets/client/src/pages/external/main/template/main-layout-external.html
@@ -1,10 +1,8 @@
-<div class="container-fluid wrapper">
-	<div class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 col-sm-10 col-sm-offset-1">
-		<div id="login" class="animate form">
-			<img src="/client/static-assets/images/unit_pal_logo.png" class="login_logo center-block" alt="" />
-			<section class="login_content content-box">
-				<router-outlet></router-outlet>
-			</section>
-		</div>
+<div customScroll class="row container-external">
+	<div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 animate form">
+		<img src="/client/static-assets/images/unit_pal_logo.png" class="login_logo center-block" alt="" />
+		<section class="login_content content-box">
+			<router-outlet></router-outlet>
+		</section>
 	</div>
 </div>
