--- a/views/external.ejs
+++ b/views/external.ejs
@@ -18,6 +18,7 @@
 	<link href="/node_modules/animate.css/animate.min.css" rel="stylesheet">
 	<link href="/node_modules/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 	<link href="/node_modules/toastr/build/toastr.min.css" rel="stylesheet">
+	<link href='/node_modules/perfect-scrollbar/dist/css/perfect-scrollbar.min.css' rel='stylesheet'>
 	<!-- Custom CSS -->
 	<link href="/client/static-assets/css/custom.css" rel="stylesheet">
 	<link href="/client/static-assets/css/unitpal.css" rel="stylesheet">
@@ -37,6 +38,7 @@
 	<script src="/node_modules/underscore/underscore-min.js"></script>
 	<script src="/node_modules/bootstrap-daterangepicker/daterangepicker.js"></script>
 	<script src="/node_modules/pace-progress/pace.min.js"></script>
+	<script src='/node_modules/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.min.js'></script>
 
 	<%if (isDevelopmentEnvironment) {%>
 		<script src="/client/systemjs.external.config.js"></script>
